# hiflipvx

hiflipvx-main_parall/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Permute.py
hiflipvx-main_parall/IP_core/: export.xo
hiflipvx-main_parall/cmake/: compile_flags.cmake  static_analysis.cmake
hiflipvx-main_parall/docs/: README_abbreviations.md
hiflipvx-main_parall/hbm_bandwidth/: Makefile  krnl_vaddmul.cfg
hiflipvx-main_parall/hbm_test/: Makefile  description.json  krnl_TestHw.cfg  makefile_us_alveo.mk  qor.json  utils.mk
hiflipvx-main_parall/hbm_test/src/: host.cpp  krnl_TestHw.cpp
hiflipvx-main_parall/include/dynfloat/: deps.h  dfloat_format.h  dynfloat.h  utils.h
hiflipvx-main_parall/include/hiflipvx/: hvx_config.h  hvx_core.h  hvx_defs.h
hiflipvx-main_parall/include/sw_test/: hvx_sw_test_core.h
hiflipvx-main_parall/samples/dfloat_add/: CMakeLists.txt  dfloat_add.cpp
hiflipvx-main_parall/samples/dfloat_div/: CMakeLists.txt  dfloat_div.cpp
hiflipvx-main_parall/samples/dfloat_exp/: CMakeLists.txt  dfloat_exp.cpp
hiflipvx-main_parall/samples/dfloat_ln/: CMakeLists.txt  dfloat_ln.cpp
hiflipvx-main_parall/samples/dfloat_log2/: CMakeLists.txt  dfloat_log2.cpp
hiflipvx-main_parall/samples/dfloat_mul/: CMakeLists.txt  dfloat_mul.cpp
hiflipvx-main_parall/samples/dfloat_sqrt/: CMakeLists.txt  dfloat_sqrt.cpp
hiflipvx-main_parall/samples/dfloat_tanh/: CMakeLists.txt  dfloat_tanh.cpp
hiflipvx-main_parall/samples/hvx_hw_test_abs/: CMakeLists.txt  hvx_hw_test_abs.cpp
hiflipvx-main_parall/samples/hvx_hw_test_add/: CMakeLists.txt  hvx_hw_test_add.cpp
hiflipvx-main_parall/samples/hvx_hw_test_addconst/: CMakeLists.txt  hvx_hw_test_addconst.cpp
hiflipvx-main_parall/samples/hvx_hw_test_clip/: CMakeLists.txt  hvx_hw_test_clip.cpp
hiflipvx-main_parall/samples/hvx_hw_test_concat/: CMakeLists.txt  hvx_hw_test_concat.cpp
hiflipvx-main_parall/samples/hvx_hw_test_conv/: CMakeLists.txt  hvx_hw_test_conv.cpp
hiflipvx-main_parall/samples/hvx_hw_test_conv_fixed/: CMakeLists.txt  hvx_hw_test_conv_fixed.cpp
hiflipvx-main_parall/samples/hvx_hw_test_dense/: CMakeLists.txt  hvx_hw_test_dense.cpp
hiflipvx-main_parall/samples/hvx_hw_test_depthwise/: CMakeLists.txt  hvx_hw_test_depthwise.cpp
hiflipvx-main_parall/samples/hvx_hw_test_layernorm/: CMakeLists.txt  hvx_hw_test_layernorm.cpp
hiflipvx-main_parall/samples/hvx_hw_test_max/: CMakeLists.txt  hvx_hw_test_max.cpp
hiflipvx-main_parall/samples/hvx_hw_test_maxconst/: CMakeLists.txt  hvx_hw_test_maxconst.cpp
hiflipvx-main_parall/samples/hvx_hw_test_min/: CMakeLists.txt  hvx_hw_test_min.cpp
hiflipvx-main_parall/samples/hvx_hw_test_minconst/: CMakeLists.txt  hvx_hw_test_minconst.cpp
hiflipvx-main_parall/samples/hvx_hw_test_mul/: CMakeLists.txt  hvx_hw_test_mul.cpp
hiflipvx-main_parall/samples/hvx_hw_test_mulconst/: CMakeLists.txt  hvx_hw_test_mulconst.cpp
hiflipvx-main_parall/samples/hvx_hw_test_multicast/: CMakeLists.txt  hvx_hw_test_multicast.cpp
hiflipvx-main_parall/samples/hvx_hw_test_pool_avg/: CMakeLists.txt  hvx_hw_test_pool_avg.cpp
hiflipvx-main_parall/samples/hvx_hw_test_pool_max/: CMakeLists.txt  hvx_hw_test_pool_max.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reduce_max/: CMakeLists.txt  hvx_hw_test_reduce_max.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reduce_mean/: CMakeLists.txt  hvx_hw_test_reduce_mean.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reduce_min/: CMakeLists.txt  hvx_hw_test_reduce_min.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reduce_sum/: CMakeLists.txt  hvx_hw_test_reduce_sum.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reorder/: hvx_hw_test_reorder.cpp
hiflipvx-main_parall/samples/hvx_hw_test_reshape/: CMakeLists.txt  hvx_hw_test_reshape.cpp
hiflipvx-main_parall/samples/hvx_hw_test_sigmoid/: CMakeLists.txt  hvx_hw_test_sigmoid.cpp
hiflipvx-main_parall/samples/hvx_hw_test_softmax/: CMakeLists.txt  hvx_hw_test_softmax.cpp
hiflipvx-main_parall/samples/hvx_hw_test_split/: CMakeLists.txt  hvx_hw_test_split.cpp
hiflipvx-main_parall/samples/hvx_hw_test_sub/: CMakeLists.txt  hvx_hw_test_sub.cpp
hiflipvx-main_parall/samples/hvx_hw_test_super/: hvx_hw_test_super.cpp  super_tb.cpp
hiflipvx-main_parall/samples/hvx_hw_test_super_re/: CMakeLists.txt  hvx_hw_test_super_re.cpp
hiflipvx-main_parall/samples/hvx_hw_test_super_reorder/: CMakeLists.txt  hvx_hw_test_super.cpp
hiflipvx-main_parall/samples/hvx_hw_test_tanh/: CMakeLists.txt  hvx_hw_test_tanh.cpp
hiflipvx-main_parall/samples/hvx_hw_test_transpose/: CMakeLists.txt  hvx_hw_test_transpose.cpp
hiflipvx-main_parall/tests/: hvx_synth.tcl  hvx_vitis.h
(+123 files in other folders)
