cmake_minimum_required (VERSION 3.20)

include("cmake/compile_flags.cmake")
include("cmake/static_analysis.cmake")

project ("hiflipvx-main_parall")
add_library(${PROJECT_NAME} INTERFACE)

mn_target_enable_clang_tidy(${PROJECT_NAME} INTERFACE)

add_subdirectory("samples/hvx_hw_test_abs")    
add_subdirectory("samples/hvx_hw_test_add")    
add_subdirectory("samples/hvx_hw_test_addconst")    
add_subdirectory("samples/hvx_hw_test_clip")    
add_subdirectory("samples/hvx_hw_test_concat")    
add_subdirectory("samples/hvx_hw_test_conv")     
add_subdirectory("samples/hvx_hw_test_conv_fixed")        
add_subdirectory("samples/hvx_hw_test_dense")    
add_subdirectory("samples/hvx_hw_test_depthwise")    
add_subdirectory("samples/hvx_hw_test_layernorm")    
add_subdirectory("samples/hvx_hw_test_max")    
add_subdirectory("samples/hvx_hw_test_maxconst")    
add_subdirectory("samples/hvx_hw_test_min")    
add_subdirectory("samples/hvx_hw_test_minconst")
add_subdirectory("samples/hvx_hw_test_mul")    
add_subdirectory("samples/hvx_hw_test_mulconst")  
add_subdirectory("samples/hvx_hw_test_multicast")    
add_subdirectory("samples/hvx_hw_test_pool_avg")    
add_subdirectory("samples/hvx_hw_test_pool_max")    
add_subdirectory("samples/hvx_hw_test_reduce_max")    
add_subdirectory("samples/hvx_hw_test_reduce_mean")    
add_subdirectory("samples/hvx_hw_test_reduce_min")    
add_subdirectory("samples/hvx_hw_test_reduce_sum")    
add_subdirectory("samples/hvx_hw_test_reshape")    
add_subdirectory("samples/hvx_hw_test_sigmoid")     
add_subdirectory("samples/hvx_hw_test_softmax")     
add_subdirectory("samples/hvx_hw_test_split")    
add_subdirectory("samples/hvx_hw_test_sub")  
add_subdirectory("samples/hvx_hw_test_super")  
add_subdirectory("samples/hvx_hw_test_super_re")  
add_subdirectory("samples/hvx_hw_test_tanh")    
add_subdirectory("samples/hvx_hw_test_transpose")  
add_subdirectory("tests/hvx_nn_synth")
add_subdirectory("tests/hvx_rnn_synth")
add_subdirectory("tests/hvx_rnn_test")
add_subdirectory("tests/hvx_nnre_synth")
add_subdirectory("tests/hvx_nnre_test")
add_subdirectory("tests/hvx_hw_test_samples")
add_subdirectory("tests/hvx_sw_test_convert")
add_subdirectory("tests/hvx_sw_test_ew")
add_subdirectory("tests/hvx_sw_test_nn")
add_subdirectory("tests/hvx_sw_test_reduce")
add_subdirectory("samples/dfloat_add")
add_subdirectory("samples/dfloat_div")
add_subdirectory("samples/dfloat_exp")
add_subdirectory("samples/dfloat_ln")
add_subdirectory("samples/dfloat_log2")
add_subdirectory("samples/dfloat_mul")
add_subdirectory("samples/dfloat_sqrt")
add_subdirectory("samples/dfloat_tanh")
